<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
>

    <item
            android:id="@+id/collectionFragment"
            android:icon="@drawable/ic_dehaze_black_24dp"
            android:title="@string/title_collection"/>

    <item
            android:id="@+id/wantlistFragment"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/title_wantlist"/>

    <item
            android:id="@+id/searchFragment"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/title_search"/>

    <item
            android:id="@+id/notificationsFragment"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications"/>

    <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/title_profile"/>

</menu>
