<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="album"
            type="com.hogent.dikkeploaten.models.ViewAlbum" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_album_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/card_side_margin"
        android:layout_marginEnd="@dimen/card_side_margin"
        android:layout_marginBottom="@dimen/card_bottom_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_album_thumb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/album_thumb"
                    android:layout_width="@dimen/album_item_thumb_width"
                    android:layout_height="@dimen/album_item_thumb_height"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/image_album_description"
                    app:imageUrl="@{album.thumb}"
                    app:srcCompat="@mipmap/ic_launcher" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/album_title_and_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/card_inner_margin"
                android:layout_marginEnd="@dimen/card_inner_margin"
                android:layout_toEndOf="@id/cv_album_thumb"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_album_title"
                    style="@style/Widget.DikkePloaten.TextView.AlbumItem.Title.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{album.title}"
                    tools:text="@string/placeholder_title" />

                <TextView
                    android:id="@+id/item_album_artist"
                    style="@style/Widget.DikkePloaten.TextView.AlbumItem.Artist.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{album.artist}"
                    tools:text="@string/placeholder_artist" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</layout>