<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.hogent.dikkeploaten.viewmodels.UserAlbumDetailViewModel"/>
        <variable
            name="callback"
            type="com.hogent.dikkeploaten.fragments.UserAlbumDetailFragment.Callback" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="#FFFFFF"
        tools:context="com.google.samples.apps.sunflower.GardenActivity"
        tools:ignore="MergeRootFrame">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/album_detail_app_bar_height"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:stateListAnimator="@animator/show_toolbar"
            android:background="#FFFFFF"
            android:animateLayoutChanges="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="#FFFFFF"
                app:statusBarScrim="#FFFFFF"
                app:collapsedTitleGravity="center"
                app:collapsedTitleTextAppearance="@style/TextAppearance.DikkePloaten.Toolbar.Text"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@{viewModel.selectedProperty.album.title}"
                app:titleEnabled="false"
                app:toolbarId="@id/toolbar">

                <ImageView
                    android:id="@+id/detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/album_detail_app_bar_height"
                    android:contentDescription="Image of album"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:imageFromUrl="@{viewModel.selectedProperty.album.thumb}"
                    app:layout_anchor="@+id/appbar"
                    app:layout_anchorGravity="center"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:titleTextColor="#FFFFFF"
                    app:layout_collapseMode="pin"
                    app:contentInsetStartWithNavigation="0dp"
                    app:navigationIcon="@drawable/ic_go_back"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/album_detail_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/fab_bottom_padding"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_normal">

                <TextView
                    android:id="@+id/album_detail_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:gravity="center_horizontal"
                    android:text="@{viewModel.selectedProperty.album.title}"
                    android:textColor="?attr/colorAccent"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/placeholder_title" />

                <TextView
                    android:id="@+id/album_detail_artist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:gravity="center_horizontal"
                    android:text="@{viewModel.selectedProperty.album.artist}"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/album_detail_name"
                    tools:text="@string/placeholder_artist"/>

                <TextView
                    android:id="@+id/album_detail_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:gravity="center_horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/album_detail_artist"
                    android:text="@{viewModel.selectedProperty.album.description}"
                    tools:text="@string/placeholder_text" />

                <TextView
                    android:id="@+id/album_detail_trackList"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_big"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:textIsSelectable="true"
                    android:minHeight="@dimen/album_description_min_height"
                    android:text="@{viewModel.selectedProperty.album.trackList}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/album_detail_description"
                    tools:text="@string/placeholder_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab3"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="@{() -> callback.removeUserAlbumFromCollection()}"
            android:tint="@android:color/white"
            app:isGone="@{!viewModel.isInCollection}"
            app:layout_anchor="@id/appbar"
            app:layout_anchorGravity="bottom|right"
            app:srcCompat="@drawable/ic_delete_white_24dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>

    <!--<layout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--        xmlns:tools="http://schemas.android.com/tools">-->

    <!--    <data>-->
    <!--        <variable-->
    <!--                name="viewModel"-->
    <!--                type="com.hogent.dikkeploaten.viewmodels.AlbumDetailViewModel"/>-->
    <!--    </data>-->

    <!--    <ScrollView-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            tools:context=".AlbumDetailFragment">-->

    <!--        <RelativeLayout-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:background="#FFFFFF">-->

    <!--            <ImageView-->
    <!--                    android:layout_width="fill_parent"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:id="@+id/image_album"-->
    <!--                    app:srcCompat="@mipmap/ic_launcher"-->
    <!--                    app:imageUrl="@{viewModel.selectedProperty.thumb}"-->
    <!--                    android:adjustViewBounds="true"-->
    <!--                    android:contentDescription="@string/imageAlbumDescription"/>-->

    <!--            <LinearLayout-->
    <!--                    android:layout_width="match_parent"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:layout_below="@id/image_album"-->
    <!--                    android:orientation="vertical"-->
    <!--                    android:layout_marginTop="-130dp"-->
    <!--                    android:layout_marginLeft="16dp"-->
    <!--                    android:layout_marginRight="16dp"-->
    <!--                    android:background="@drawable/layout_rounded_edge"-->
    <!--                    android:gravity="center">-->

    <!--                <TextView-->
    <!--                        android:text="@{viewModel.selectedProperty.title}"-->
    <!--                        android:layout_width="wrap_content"-->
    <!--                        android:layout_height="wrap_content"-->
    <!--                        android:id="@+id/title_album"-->
    <!--                        android:layout_marginTop="20dp"-->
    <!--                        android:textSize="30sp"-->
    <!--                        android:textStyle="bold"-->
    <!--                        tools:text="@string/placeholder_title"/>-->

    <!--                <TextView-->
    <!--                        android:text="@{viewModel.selectedProperty.artist}"-->
    <!--                        android:layout_width="wrap_content"-->
    <!--                        android:layout_height="wrap_content"-->
    <!--                        android:layout_marginTop="10dp"-->
    <!--                        android:textSize="20sp"-->
    <!--                        android:id="@+id/artist_album"-->
    <!--                        android:textColor="@color/primaryDarkColor"-->
    <!--                        tools:text="@string/placeholder_artist"/>-->

    <!--                <TextView-->
    <!--                        android:text="@{viewModel.selectedProperty.description}"-->
    <!--                        android:layout_width="match_parent"-->
    <!--                        android:layout_height="wrap_content"-->
    <!--                        android:id="@+id/description_album"-->
    <!--                        android:layout_marginTop="36dp"-->
    <!--                        android:layout_marginLeft="5dp"-->
    <!--                        android:layout_marginRight="5dp"-->
    <!--                        tools:text="@string/placeholder_text"/>-->

    <!--                <LinearLayout-->
    <!--                        android:orientation="horizontal"-->
    <!--                        android:layout_width="fill_parent"-->
    <!--                        android:layout_height="wrap_content"-->
    <!--                        android:layout_marginTop="20dp"-->
    <!--                        android:layout_marginLeft="5dp"-->
    <!--                        android:layout_marginRight="5dp"-->
    <!--                        android:weightSum="2"-->
    <!--                        android:background="@drawable/border"-->
    <!--                        android:padding="10dp"-->
    <!--                        android:id="@+id/linearLayout"-->
    <!--                        android:baselineAligned="false">-->

    <!--                    <LinearLayout-->
    <!--                            android:orientation="vertical"-->
    <!--                            android:layout_width="0dp"-->
    <!--                            android:layout_height="wrap_content"-->
    <!--                            android:layout_weight="1">-->

    <!--                        <TextView-->
    <!--                                android:text="@string/genre"-->
    <!--                                android:layout_width="match_parent"-->
    <!--                                android:layout_height="wrap_content"-->
    <!--                                android:id="@+id/lbl_genre"-->
    <!--                                android:textStyle="bold"-->
    <!--                                android:gravity="center"/>-->

    <!--                        <TextView-->
    <!--                                android:text="@{viewModel.selectedProperty.genre}"-->
    <!--                                android:layout_width="match_parent"-->
    <!--                                android:layout_height="wrap_content"-->
    <!--                                android:id="@+id/genre_album"-->
    <!--                                android:gravity="center"-->
    <!--                                android:textAllCaps="false"-->
    <!--                                android:textColor="@color/primaryDarkColor"-->
    <!--                                tools:text="@string/genre"/>-->

    <!--                    </LinearLayout>-->

    <!--                    <LinearLayout-->
    <!--                            android:orientation="vertical"-->
    <!--                            android:layout_width="0dp"-->
    <!--                            android:layout_height="wrap_content"-->
    <!--                            android:layout_weight="1">-->

    <!--                        <TextView-->
    <!--                                android:text="@string/released"-->
    <!--                                android:layout_width="match_parent"-->
    <!--                                android:layout_height="wrap_content"-->
    <!--                                android:id="@+id/lbl_release"-->
    <!--                                android:textStyle="bold"-->
    <!--                                android:gravity="center"/>-->

    <!--                        <TextView-->
    <!--                                android:text="@{viewModel.selectedProperty.releaseYear}"-->
    <!--                                android:layout_width="match_parent"-->
    <!--                                android:layout_height="wrap_content"-->
    <!--                                android:id="@+id/release_album"-->
    <!--                                android:gravity="center"-->
    <!--                                android:textColor="@color/primaryDarkColor"-->
    <!--                                tools:text="@string/released"/>-->

    <!--                    </LinearLayout>-->

    <!--                </LinearLayout>-->

    <!--                <TextView-->
    <!--                        android:text="@string/tracklist"-->
    <!--                        android:layout_width="wrap_content"-->
    <!--                        android:layout_height="wrap_content"-->
    <!--                        android:layout_marginTop="20dp"-->
    <!--                        android:id="@+id/textView10"-->
    <!--                        android:textStyle="bold"/>-->

    <!--                <TextView-->
    <!--                        android:text="@{viewModel.selectedProperty.trackList}"-->
    <!--                        android:layout_width="match_parent"-->
    <!--                        android:layout_height="wrap_content"-->
    <!--                        android:id="@+id/tracklist_album"-->
    <!--                        android:layout_marginTop="16dp"-->
    <!--                        android:layout_marginLeft="5dp"-->
    <!--                        android:layout_marginRight="5dp"-->
    <!--                        tools:text="@string/placeholder_text"/>-->

    <!--                <TextView-->
    <!--                        android:text="@string/members"-->
    <!--                        android:layout_width="wrap_content"-->
    <!--                        android:layout_height="wrap_content"-->
    <!--                        android:layout_marginTop="20dp"-->
    <!--                        android:id="@+id/lbl_musicians"-->
    <!--                        android:textStyle="bold"/>-->


    <!--                <TextView-->
    <!--                        android:text="@{viewModel.selectedProperty.musicians}"-->
    <!--                        android:layout_width="match_parent"-->
    <!--                        android:layout_height="wrap_content"-->
    <!--                        android:id="@+id/musicians_album"-->
    <!--                        android:layout_marginBottom="200dp"-->
    <!--                        android:layout_marginLeft="5dp"-->
    <!--                        android:layout_marginRight="5dp"-->
    <!--                        tools:text="@string/placeholder_text"/>-->

    <!--            </LinearLayout>-->


    <!--        </RelativeLayout>-->

    <!--    </ScrollView>-->

    <!--</layout>-->